static/css/style.css
/* General definitions */

:root {
    --contrast-color-1: #7cbec0;
    --contrast-color-2: #003049;
    --contrast-color-3: #d62828;
    --main-color-dark:  #cd7415;
    --main-color-medium:#f77f00;
    --main-color-bright:#fcbf49;
    --main-color-bg:    #EAe2b7;
}

/* Modals */

.modal-field {
    display:inline-block;
}

.modal > form, .modal > h2, .modal > p {
    padding:50px;
    padding-bottom:10px;
}

/* Login/register pages */

.login-register-card {
    max-width: 450px;
    margin: auto;
    background-color: var(--contrast-color-2) !important;
    border-radius: 5px;
    margin-top: 30px !important;
}

form button {
    padding-bottom: 20px !important;
}

.input-field {
    background-color: #eeebe3;
    border-radius: 5px;
    height: 45px;
}

.register-card {
    height: 660px;
}

/* base.html */
body {
    margin-bottom: 200px;
}
.page-footer, main:after {
    background-color: var(--main-color-bright);
}

footer {
    position:fixed;
    bottom:0;
    left: 0;
    right:0;
    z-index: 10;
    max-width: 100vw;
    height: 120px;
}

.footer-copyright {
    background-color: var(--main-color-dark)
}

#footer-top {
    max-height: 6vh;
}

#footer-bottom {
    max-height: 4vh;
}

nav {
    background-color: var(--main-color-bright);
}

.nav-wrapper {
    background-color: var(--main-color-dark);
    align-items: center;
}

.nav-wrapper > a {
    color: var(--contrast-color-2);
}

@media screen and (max-width: 992px){
    #nav-mobile {
        display: none;
    }
}

.tabs.tabs-transparent .tab a {
    color: var(--contrast-color-2) !important;
}

html {
    background-color: var(--main-color-bg);
    height:100%;
}

.container{
    width: 100%;
}

/* Scroll to top button
 Thanks to https://css-tricks.com/how-to-make-an-unobtrusive-scroll-to-top-button/
   for the code adapted here */
#scrollToTopBtn {
    position: relative;
    bottom: 200px;
    background-color: var(--contrast-color-3);
    border: none;
    border-radius: 50%;
    color: white;
    cursor: pointer;
    font-size: 16px;
    line-height: 48px;
    width: 48px;
    left: 90%;
}

/* index.html */

.hero-container {
    background-image: url( ../images/hero.png );
    background-color: var(--contrast-color-2);
    width: 100%;  
    background-size: cover;
    background-position: center;
    display: flex;
    height: 375px;
}

#banner-bottom {
    background-image: url(../images/home/banner-bottom.jpeg);
    background-repeat: none;
    background-size: cover;
    background-position: center;
    padding-bottom: 140px;
    padding-top: 0;
}

.row:last-child {
    margin-bottom: 0;
}

#edit-bio {
    margin-bottom: 20px;
}

.join-text {
    text-align:center;
}

#join-the-fight {
    color: var(--main-color-bright);
    padding-top: 70px;
}

#join-now {
    color: var(--contrast-color-2)
}

#combat-img{
    background-image: url(../images/home/combat.jpeg);
    padding: 0;
}

#explore-img {
    background-image: url(../images/home/map.jpg);
}   

#grow-img {
    background-image: url(../images/home/training.jpeg);
    border: 1px solid black;
    margin-bottom: 20px;
}

#grow-img, #explore-img, #combat-img {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    padding-bottom: 400px;
}

@media screen and (max-width:800px){
    #grow-img, #explore-img, #combat-img {
        padding-bottom: 250px;
    }
}

@media screen and (max-width:400px){
    #grow-img, #explore-img, #combat-img {
        padding-bottom: 175px;
    }
}

@media screen and (min-width:992px){
    .hero-container{
        height:750px;
    }
}

#info-section {
    background-color: #eeebe3;
}

/* character.html */
/* Stat-circle is what confines the stat blocks to a circle. Thanks to https://stackoverflow.com/questions/4861224/how-to-use-css-to-surround-a-number-with-a-circle/19613616 for this. */
.stat-circle {
    width: 140px;
    line-height: 40px;
    border-radius: 50%;
    text-align: center;
    font-size: 32px;
    border: 2px solid #666;
    margin: auto;
}

.left-stat-column {
    text-align: center;
}

/* Tooltips section. Thanks to W3 schools for this code snippet. */
/* Tooltip container */
.tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}
  
    /* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    width: 120px;
    font-size: 14px;
    line-height: 14px;
    background-color: black;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
   
    /* Position the tooltip text */
    position: absolute;
    z-index: 1;
}
  
  /* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible
}

#hidden-menu {
    visibility: hidden;
}

#icon-selection, #hide-selection {
    z-index: 3;
    display: inline-block;
    overflow: scroll;
    overflow-x: hidden;
    border: 1px solid black;
    background-color: #eeebe3;
}

#new-icon {
    background-color: #eeebe3;
    display: inline-block;
    text-align: center;
    height: 25px;
    width: 260px;
    padding-top: 0;
    padding: 0 40px;
    border: 1px solid black;
    cursor: pointer;
    transition: background-color 1s;
}

#new-icon:hover {
    background-color: var(--main-color-bg);
}

#icon-selection > img {
    border: 1px solid black;
}

#icon-selection > img:hover {
    border: 1px solid gold;
}

#hide-selection {
    position: absolute;
    margin-top: 667px;
    width: 280px;
    text-align: center;
    cursor:pointer;
}

#icon-selection {
    position: absolute;
    max-width: 280px;
    max-height: 667px;
}

#disc-label {
    color: black;
    font-size: 18px;
}

#stats {
    padding-top: 40px;
    display:inline-block;
    background-color: #eeebe3;
}

.new-char {
    display:inline-block;
    width:100%;
    margin: auto;
    padding-top: 80px;
}

/* The character page panel on the top/right */
.char-left {
    float: left;
    width: 50%;
    height: 291px;
    border: 1px solid black;
    padding-left: 10px;
    overflow:scroll;
}

.char-left > div {
    position: relative;
    background: #eeebe3;
}

.char-right {
    width:45%;
    height: 100%;
}

.char-bottom {
    width: 90%;
    display: flex;
}

.char-clear-both {
    clear: both;
}

/* Character page training panels */

#disc-card-action {
    padding: 10px;
    padding-left: 40px;
}

.body-image {
    height: 100%;
    width: 100%;
}

.body-image > div > img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.ch-select {
    max-width: 1100px;
    margin: auto;
    height: 100%;
    padding-top: 7px;
    align-items: center;
}

.char-icon {
    position: relative;
    width: 260px;
    height: auto;
    max-height: 260px;
    max-width: 260px;
}

.ch-card {
    max-height: 260px;
    max-width: 260px;
    width: auto;
    margin: auto;
    padding: 11px;
}

.ch-card-column {
    margin: auto;
    display: block;
}

form > input {
    background-color: #eeebe3 !important;
}

.fa-plus-circle {
    color:darkgray;
    font-size: 84px;
}

.ch-show {
    border: 1,solid,black;
}

.card {
    margin-top: 0px;   
    height: 500px;
    background-color: var(--contrast-color-1);
}

.card > h3, .card > div > h3, .card > div > h4 {
    margin-top: 0px;
}

li > a {
    width: 100%
}

.ch-select {
    width: 100%;
    height: 275px;
    margin-top:5px;
    margin-right: 5px;
    margin-left: 5px;
    padding-top: 5px;
    background-color: var(--contrast-color-3)
}

#ch-select-section {
    background-color: var(--contrast-color-3);
    height: auto;
    display: inline-block;
}

@media screen and (min-width: 993px) {
    #ch-select-section{
        display: flex;
        max-width: 1000px;
        margin: auto;
    }
}

.pagination > li {
    padding-left: 30px;
    padding-right: 30px;
}

.pagination > li:first-of-type {
    margin-left: 55px
}

.card > .row {
    margin-left: 30px;
}

.hidden {
    display: none;
}

.card-title {
    background-color: var(--contrast-color-2);
    padding: 10px !important;
}

.char-link {
    width: 261px;
    height: 250px;
    display: block
}

#delete-char-row {
    display: none;
    height: 0px;
    overflow: hidden;
    background-color: var(--contrast-color-3);
    border-radius: 15px 15px 15px 15px ;
}

#delete-char-row > div > form > input {
    max-width: 400px;
}

/* Leaderboard.html */

#top-10 {
    text-align: center;
    margin: 1em;
}

td > img {
    max-width: 65px;
    max-height: 65px;
}

.leaderboard-dots {
    margin: auto;
    width: auto;
    text-align: center;
    font-size: 28px;
}

.user-character {
    background-color: var(--contrast-color-1)
}

#first-place{
    background-color: gold;
}

#second-place{
    background-color: silver;
}

#third-place{
    background-color: rgb(143, 66, 21);
}

table {
    background-color: #eeebe3;
    font-size: 18px;
}

@media screen and (max-width: 992px) {
    thead > tr > th:nth-of-type(2) {
        margin-top: 45px;
    }
}

/* profile.html */

.profile-char-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 1000px;
}

.profile-char-item {
    min-width: 200px;
}

#user-settings {
    margin-top:50px;
    display:block;
    margin-left:15%;
    margin-right:15%;
    clear:both;
}

.btn-profile {
    display: block;
    margin:auto;
    margin-top: 30px;
    margin-bottom: 30px;
    width:50%;
    align-content: center;
}

.hr-profile {
    border-top: 1px #36454f solid;
    margin: 20px;
}

.btn {
    background-color: var(--contrast-color-1);
    color: #003039
}

.delete-button {
    background-color: var(--contrast-color-3);
}

/* about.html */

#about-img-100 {
    width: 100%;
}

/* Thanks to https://avexdesigns.com/blog/responsive-youtube-embed for this example of responsive video embedding */
.video-container { 
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.video-container iframe, .video-container object, .video-container embed { 
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%; 
}

.play-header > h4 {
    text-align: center;
}

.about-page h4, .about-page h2 {
    margin-bottom: 0;
}

.indent {
    text-indent: 30px;
}

.hr-about{
    border-top: 1px #36454f solid;
    width: 80px;
    display: inline-block;
    margin: 0;
    padding: 0;
}

/* library.html
Thanks to https://www.w3schools.com/howto/howto_js_vertical_tabs.asp for the code adapted here */

.scrollable {
    height: 65vh;
    overflow-y: auto;
    background-color: #eeebe3;
    padding-left: 30px;
    padding-right: 30px;
}

@media screen and (max-height: 1040px) {
    .scrollable {
        height: 60vh;
    }
}

@media screen and (max-height: 900px) {
    .scrollable {
        height: 55vh;
    }
}

@media screen and (max-height: 740px) {
    .scrollable {
        height: 45vh;
    }
}

.library-container {
    height:120vh;
}

.tab-library {
    float: left;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
    width: 30%;
    height: 300px;
    position:fixed;
  }
  
  /* Style the buttons that are used to open the tab content */
  .tab-library button {
    display: block;
    background-color: inherit;
    color: black;
    padding: 22px 16px;
    width: 100%;
    border: none;
    outline: none;
    text-align: left;
    cursor: pointer;
    transition: 0.3s;
  }
  
  /* Change background color of buttons on hover */
  .tab-library button:hover {
    background-color: #ddd;
  }
  
  /* Create an active/current "tab button" class */
  .tab-library button.active {
    background-color: #ccc;
  }
  
  /* Style the tab content */
  .tabcontent {
    float: left;
    padding: 0px 12px;
    border: 1px solid #ccc;
    width: 70%;
    border-left: none;
    height: 100%;
  }

